[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/UnitCreator/Scenes/Editor.gd" type="Script" id=1]
[ext_resource path="res://addons/UnitCreator/Scenes/UnitList.gd" type="Script" id=2]

[node name="MainContainer" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 450 )
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="ContentContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer"]
margin_right = 142.0
margin_bottom = 586.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="ContentContainer/VBoxContainer"]
margin_right = 142.0
margin_bottom = 562.0
size_flags_vertical = 3

[node name="UnitList" type="ItemList" parent="ContentContainer/VBoxContainer/ScrollContainer"]
margin_right = 142.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "New Unit", null, false, "New Unit", null, false, "New Unit", null, false ]
allow_reselect = true
script = ExtResource( 2 )
units_directory = "res://Resources/UnitRes/Instances"

[node name="ButtonsContainer" type="HBoxContainer" parent="ContentContainer/VBoxContainer"]
margin_top = 566.0
margin_right = 142.0
margin_bottom = 586.0

[node name="CreateBTN" type="Button" parent="ContentContainer/VBoxContainer/ButtonsContainer"]
margin_right = 83.0
margin_bottom = 20.0
text = "Create new"

[node name="DeleteBTN" type="Button" parent="ContentContainer/VBoxContainer/ButtonsContainer"]
margin_left = 87.0
margin_right = 142.0
margin_bottom = 20.0
text = "Delete"

[connection signal="UnitDeleted" from="ContentContainer/VBoxContainer/ScrollContainer/UnitList" to="." method="_on_UnitList_UnitDeleted"]
[connection signal="item_selected" from="ContentContainer/VBoxContainer/ScrollContainer/UnitList" to="ContentContainer/VBoxContainer/ScrollContainer/UnitList" method="_on_UnitList_item_selected"]
[connection signal="pressed" from="ContentContainer/VBoxContainer/ButtonsContainer/CreateBTN" to="ContentContainer/VBoxContainer/ScrollContainer/UnitList" method="_on_CreateBTN_pressed"]
[connection signal="pressed" from="ContentContainer/VBoxContainer/ButtonsContainer/DeleteBTN" to="ContentContainer/VBoxContainer/ScrollContainer/UnitList" method="_on_DeleteBTN_pressed"]
